# Ftop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  monitor.py  uninstall.sh  update.sh
src/: lib.rs  main.rs  parsers.rs  process_controller.rs  system_interface.rs
tests/: integration_test.rs
