[package]
name = "ftop"
version = "0.1.0"
edition = "2021"

[lib]
name = "ftop"
path = "src/lib.rs"

[[bin]]
name = "ftop"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = { version = "0.26", default-features = false, features = ["crossterm"] }
sysinfo = { version = "0.29", default-features = false }
libc = "0.2"
nix = { version = "0.27", features = ["signal"] }
